# voice_telegram_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  analyze.py  bot.py  charts.py  db.py  diarize.py  docker-compose.yaml  main.py  pipeline.py  pyproject.toml  report.py  test_local.py  transcribe.py
